k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-crud-service
spec:
  selector:
    app: user-crud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
