k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-crud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: _HOST_ # Replace with your domain 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-crud-service
            port:
              number: 80
